[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"]}
cfg-if = "1"
winit = { version = "0.28" }
wgpu = { version = "0.17" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] } # jpeg uses rayon -> wasm issue
cgmath = "0.18" # math for 3d stuff     # is glam more lighweight?
tobj = { version = "3.2.1", features = [ "async", ]} # loading .obj files


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Response",
]}
js-sys = "0.3"
getrandom = { version = "0.2.10", features = ["js"]} # new dependency crashes for wasm and needs this js feature here

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


