[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive"]}
cfg-if = "1"
winit = "0.28"
wgpu = "0.17"
png = "0.17.10"
glam = "0.24"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


